<resources>
    <string name="app_name"><b>Crimes&amp;Losts Report</b></string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Current Password</string>
    <string name="hint_confirm_password">Confirm New Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="hint_enter_name">Enter Full Name</string>
    <string name="hint_enter_school">Enter School Name</string>
    <string name="hint_enter_id">Enter School ID</string>
    <string name="hint_enter_phone_num">Enter Phone Number</string>
    <string name="hint_description">Add Description</string>
    <string name="hint_title">Add Title</string>
    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>
    <string name="hint_username">Username</string>
    <string name="activity_main_title">Reports</string>
    <string name="tips_title">Tips - Writing a report</string>
    <string name="profile_info">YOUR REPORTS INFO</string>
    <string name="total_reports_text">Number of posted reports: </string>
    <string name="active_reports">Number of your reports in progress:</string>
    <string name="solved_reports">Number of your reports who are solved:</string>

    <string-array name="statuses">
        <item>newann</item>
        <item>progress</item>
        <item>done</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="button_change_password">CHANGE PASSWORD</string>
    <string name="change_email">Change Email</string>
    <string name="hint_new_email">New Email</string>
    <string name="button_change_email">CHANGE EMAIL</string>
    <string name="forgot_password"><b>Forgot password?</b></string>
    <string name="forgot_password_activity">Forgot Password</string>
    <string name="button_forgot_password">FORGOT PASSWORD</string>

</resources>