<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:layout_marginTop="5dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/username"
            android:layout_width="200dp"
            android:layout_marginStart="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="TextView"
            android:textSize="25dp"

            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider"/>

        <TextView
            android:id="@+id/report_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="20dp"
            android:textStyle="bold|italic"
            android:text="@string/profile_info" />

        <TextView
            android:id="@+id/total_reports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="15dp"
            android:text="@string/total_reports_text"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/number_of_total_reports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-38dp"
            android:layout_marginLeft="245dp"
            android:text="    "
            android:textSize="18dp" />

        <TextView
            android:id="@+id/active_reports"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="15dp"
            android:text="@string/active_reports"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/number_of_active_reports"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_gravity="start"
            android:layout_marginLeft="330dp"
            android:layout_marginTop="-40dp"
            android:text="     "
            android:textSize="18dp" />

        <TextView
            android:id="@+id/solved_reports"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="18dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/solved_reports" />

        <TextView
            android:id="@+id/number_of_solved_reports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="365dp"
            android:layout_marginTop="-50dp"
            android:textSize="18dp"

            android:text="     " />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider"/>

        <Button
            android:id="@+id/changeEmailProfile"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient4"
            app:backgroundTint="@null"
            android:text="CHANGE EMAIL" />

        <Button
            android:id="@+id/changePasswordProfile"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient4"
            app:backgroundTint="@null"
            android:text="CHANGE PASSWORD" />



    </LinearLayout>

</ScrollView>